# trustedagents-website

./: .gitignore  CNAME  DEPLOYMENT_AUTOMATION.md  README.md  SESSION_TrustedAgents.md  index.html
apps/onboarding/: .env.example  .env.local.example  .env.production.example  .gitignore  DEPLOY_PRODUCTION.md  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  run_demo.sh
apps/onboarding/deploy/: Caddyfile.example
apps/onboarding/src/trusted_agents_onboarding/: __init__.py  app.py  crypto.py  models.py  payments.py  store.py  worker.py
apps/onboarding/src/trusted_agents_onboarding/static/: admin.html  index.html  styles.css
apps/onboarding/tests/: test_onboarding.py
infra/hetzner/: .gitignore  .terraform.lock.hcl  NEXT_STEPS_STAGING.md  README.md  cloud-init.yaml.tftpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/hetzner/scripts/: check.sh
