[project]
name = "trusted-agents-onboarding"
version = "0.1.0"
description = "Trusted Agents managed-agent onboarding backend and worker scaffold"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.package-data]
trusted_agents_onboarding = ["static/*.html", "static/*.css"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
